--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       {% endif %}
 
       <div>
-        <img src="{{ '/assets/images/Free_Market_entrance.png' | relataive_url }}" alt="free_market_entrance">
+        <img src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}" alt="free_market_entrance">
         <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
         <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       </div>
