Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
       <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
       {% endif %}
 
-      <div>
+      <div style="flex-direction: row; align-items: center;">
         <img src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}" alt="free_market_entrance">
         <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-        <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       </div>
+      <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
       {% if site.show_downloads %}
       <section id="downloads">
