--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
       {% endif %}
 
-      <div style="flex-direction: row; align-items: center;">
+      <div style="display: flex; flex-direction: row; align-items: center;">
         <img src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}" alt="free_market_entrance">
         <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
       </div>
