--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,10 @@
       {% endif %}
 
       <div style="display: flex; flex-direction: row; align-items: center;">
-        <img width=100 src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}" alt="free_market_entrance">
+        <a href="/">
+          <img width=100 src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}"
+            alt="free_market_entrance">
+        </a>
         <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
       </div>
       <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
