Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       {% endif %}
 
       <div style="display: flex; flex-direction: row; align-items: center;">
-        <a href="{{ site.url }}">
+        <a href="{{ site.baseurl }}">
           <img width=100 src="{{ '/assets/images/Free_Market_entrance.png' | relative_url }}"
             alt="free_market_entrance">
         </a>
